# x4c-cxx

./: .gitignore  CMakeLists.txt  cmake-config.h.in
cmake/: ExternalAntlr4Cpp.cmake  FindIniParser.cmake
src/: CMakeLists.txt  Common.hh  _common.hh  main.cc
src/config/: CMakeLists.txt  config.hh  get_ini.cc  ini_wrapper.cc  ini_wrapper.hh  myini.cc  myini.hh
src/contrib/: constructor_hax.h
src/translate/: CMakeLists.txt
src/translate/AST/: AST.hh  CMakeLists.txt  babbys_first_template.cc  babbys_first_template.hh  expression.cc  expression.hh  what_am_I_doing.cc  what_am_I_doing.hh
src/translate/script_to_xml/: CMakeLists.txt  listener.cc  listener.hh  parse.cc  visitor.cc  visitor.hh
src/translate/script_to_xml/util/: string_tree.cc  util.hh
src/translate/xml_to_script/: CMakeLists.txt
src/xml/: CMakeLists.txt  doc_wrapper.cc  doc_wrapper.hh  xml.hh
src/xml/util/: get_document.cc  util.hh
